Selecting a profile in the profiles window will now add its name to the textbox for easy overwriting

--- a/MW5 Mod Oganizer WPF/Views/ProfilesView.xaml
+++ b/MW5 Mod Oganizer WPF/Views/ProfilesView.xaml
@@ -55,6 +55,11 @@
                           SizeChanged="ProfilesDataGrid_SizeChanged"
                           SelectionMode="Single"
                           SelectionUnit="FullRow">
+                    <behaviors:Interaction.Triggers>
+                        <behaviors:EventTrigger EventName="SelectionChanged">
+                            <behaviors:InvokeCommandAction Command="{Binding SelectionChangedCommand}" PassEventArgsToCommand="True"/>
+                        </behaviors:EventTrigger>
+                    </behaviors:Interaction.Triggers>
                     <DataGrid.Columns>
                         <DataGridTextColumn x:Name="ProfilesColumn"
                                             Binding="{Binding Name}"
