--- a/MW5 Mod Oganizer WPF/Views/ProfilesView.xaml
+++ b/MW5 Mod Oganizer WPF/Views/ProfilesView.xaml
@@ -80,11 +80,9 @@
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
-                <TextBlock Text="Give your profile a name"
-                           Foreground="#484D54"
-                           FontSize="16"
-                           Margin="0 0 0 5"
-                           Grid.Row="0"/>
+                <Border Grid.Row="0" Background="#FFC1C1C1" BorderBrush="#FFADADAD" BorderThickness="0 0 3 4">
+                    <TextBlock Text="Give your profile a name" TextOptions.TextFormattingMode="Display" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#484D54" Margin="0 5 0 0"/>
+                </Border>
                 <TextBox Text="{Binding TextBoxContent, UpdateSourceTrigger=PropertyChanged}" 
                          TextWrapping="Wrap"
                          Grid.Row="1"
