--- a/MW5 Mod Oganizer WPF/MainWindow.xaml
+++ b/MW5 Mod Oganizer WPF/MainWindow.xaml
@@ -208,10 +208,29 @@
                                         Header="Author" 
                                         MinWidth="200" 
                                         Binding="{Binding Author}"/>
-                    <DataGridTextColumn x:Name="DataGridColumnVersion"
+                    <!--<DataGridTextColumn x:Name="DataGridColumnVersion"
                                         Header="Version" 
                                         MinWidth="150"
-                                        Binding="{Binding Version}"/>
+                                        Binding="{Binding Version}"/>-->
+                    <DataGridTemplateColumn x:Name="DataGridColumnVersion" Header="Version" Width="auto" MinWidth="100"  CanUserResize="False">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="auto"/>
+                                        <ColumnDefinition Width="5"/>
+                                        <ColumnDefinition Width="auto"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Text="{Binding Version}" VerticalAlignment="Bottom" Grid.Column="0"/>
+                                    <StackPanel Orientation="Horizontal" Grid.Column="2">
+                                        <TextBlock Text="(" Foreground="#69717d" FontSize="11" FontWeight="SemiBold" TextOptions.TextFormattingMode="Display" VerticalAlignment="Center"/>
+                                        <TextBlock Text="{Binding BuildNumber}" Foreground="CadetBlue" FontSize="11" TextOptions.TextFormattingMode="Display" VerticalAlignment="Center"/>
+                                        <TextBlock Text=")" Foreground="#69717d" FontSize="11" FontWeight="SemiBold" TextOptions.TextFormattingMode="Display" VerticalAlignment="Center"/>
+                                    </StackPanel>
+                                </Grid>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
                     <DataGridTextColumn x:Name="DataGridColumnSource"
                                         Header="Source"
                                         Width="*"
