--- a/MW5 Mod Oganizer WPF/Views/AboutView.xaml
+++ b/MW5 Mod Oganizer WPF/Views/AboutView.xaml
@@ -27,16 +27,16 @@
                     </Grid.RowDefinitions>
                     
                     <StackPanel Orientation="Vertical" Grid.Row="0" VerticalAlignment="Stretch">
-                        <TextBlock Text="{Binding Title}" FontSize="15" FontWeight="Bold" Margin="0 5 0 0"/>
-                        <TextBlock Text="{Binding Version}" VerticalAlignment="Bottom"/>
+                        <TextBlock Text="{Binding Title, FallbackValue='Sample'}" FontSize="15" FontWeight="Bold" Margin="0 5 0 0"/>
+                        <TextBlock Text="{Binding Version, FallbackValue='Sample'}" VerticalAlignment="Bottom"/>
                     </StackPanel>
                     
                     <StackPanel Orientation="Vertical" Grid.Row="1">
-                        <TextBlock Text="Copyright © Maxim Agemans" Margin="0 0 0 20"/>
-                        <TextBlock Text="{Binding Distribution}" TextWrapping="Wrap"/>
+                        <TextBlock Text="{Binding Copyright, FallbackValue='Sample'}" Margin="0 0 0 20"/>
+                        <TextBlock Text="{Binding Distribution, FallbackValue='Sample'}" TextWrapping="Wrap"/>
                     </StackPanel>
                     
-                    <TextBlock Text="{Binding Source}" TextWrapping="Wrap" Margin="0 0 0 5" VerticalAlignment="Bottom" Grid.Row="1"/>
+                    <TextBlock Text="{Binding Source, FallbackValue='Sample'}" TextWrapping="Wrap" Margin="0 0 0 5" VerticalAlignment="Bottom" Grid.Row="1"/>
                 </Grid>
             </TabItem>
             <TabItem Header="License" Style="{DynamicResource TabItemStyle}">
