--- a/MW5 Mod Oganizer WPF/Views/AboutView.xaml
+++ b/MW5 Mod Oganizer WPF/Views/AboutView.xaml
@@ -40,7 +40,11 @@
                 </Grid>
             </TabItem>
             <TabItem Header="License" Style="{DynamicResource TabItemStyle}">
-                
+                <Grid Margin="0 5 0 0">
+                    <StackPanel Orientation="Vertical">
+                        <TextBlock Text="{Binding License, FallbackValue='Sample'}" TextWrapping="Wrap" Margin="5 0 0 0"/>
+                    </StackPanel>
+                </Grid>
             </TabItem>
             <TabItem Header="Credits" Style="{DynamicResource TabItemStyle}">
 
