--- a/MW5 Mod Oganizer WPF/Views/AboutView.xaml
+++ b/MW5 Mod Oganizer WPF/Views/AboutView.xaml
@@ -47,7 +47,45 @@
                 </Grid>
             </TabItem>
             <TabItem Header="Credits" Style="{DynamicResource TabItemStyle}">
+                <Grid Margin="5 5 0 0">
+                    <StackPanel Orientation="Horizontal">
+                        <Grid Margin="0 0 10 5">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="auto"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <Label Content="Developers and Maintainers" Grid.Row="0" HorizontalAlignment="Center"/>
+                            <ListView x:Name="DevelopersListView" ItemsSource="{Binding Developers}" Grid.Row="1" Width="175"/>
+                        </Grid>
 
+                        <Grid Margin="0 0 10 5">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="auto"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <Label Content="Supporters" Grid.Row="0" HorizontalAlignment="Center"/>
+                            <ListView x:Name="SupportListView" ItemsSource="{Binding Supporters}" Grid.Row="1" Width="150"/>
+                        </Grid>
+
+                        <Grid Margin="0 0 10 5">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="auto"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <Label Content="Donators" Grid.Row="0" HorizontalAlignment="Center"/>
+                            <ListView x:Name="DonatorListView" ItemsSource="{Binding Donators}" Grid.Row="1" Width="150"/>
+                        </Grid>
+
+                        <Grid Margin="0 0 10 5">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="auto"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <Label Content="Other" Grid.Row="0" HorizontalAlignment="Center"/>
+                            <ListView x:Name="OtherListView" ItemsSource="{Binding Other}" Grid.Row="1" Width="150"/>
+                        </Grid>
+                    </StackPanel>
+                </Grid>
             </TabItem>
         </TabControl>
     </Grid>
