--- a/MW5 Mod Oganizer WPF/Themes/TabControl/TabItemTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/TabControl/TabItemTheme.xaml
@@ -195,7 +195,7 @@
                                 <Condition Binding="{Binding TabStripPlacement, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" Value="Top"/>
                             </MultiDataTrigger.Conditions>
                             <Setter Property="Panel.ZIndex" Value="1"/>
-                            <Setter Property="Margin" Value="-2,-2,-2,0"/>
+                            <Setter Property="Margin" Value="-2 -2 -2 0"/>
                             <Setter Property="Opacity" TargetName="innerBorder" Value="1"/>
                             <Setter Property="BorderThickness" TargetName="innerBorder" Value="1,1,1,0"/>
                             <Setter Property="BorderThickness" TargetName="mainBorder" Value="1,1,1,0"/>
