--- a/MW5 Mod Oganizer WPF/Themes/TabControl/TabItemTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/TabControl/TabItemTheme.xaml
@@ -12,11 +12,8 @@
     </Style>
     <SolidColorBrush x:Key="TabItem.Static.Background" Color="#E0D7D7"/>
     <SolidColorBrush x:Key="TabItem.Static.Border" Color="#ACACAC"/>
-    <LinearGradientBrush x:Key="TabItem.MouseOver.Background" EndPoint="0,1" StartPoint="0,0">
-        <GradientStop Color="#ECF4FC" Offset="0.0"/>
-        <GradientStop Color="#DCECFC" Offset="1.0"/>
-    </LinearGradientBrush>
-    <SolidColorBrush x:Key="TabItem.MouseOver.Border" Color="#7EB4EA"/>
+    <SolidColorBrush x:Key="TabItem.MouseOver.Background" Color="#BDBDBD"/>
+    <SolidColorBrush x:Key="TabItem.MouseOver.Border" Color="#ACACAC"/>
     <SolidColorBrush x:Key="TabItem.Selected.Background" Color="#f7f5f2"/>
     <SolidColorBrush x:Key="TabItem.Selected.Border" Color="#ACACAC"/>
     <SolidColorBrush x:Key="TabItem.Disabled.Background" Color="#F0F0F0"/>
