--- a/MW5 Mod Oganizer WPF/Views/AboutView.xaml
+++ b/MW5 Mod Oganizer WPF/Views/AboutView.xaml
@@ -23,6 +23,7 @@
                 <Grid Margin="5 0 0 0">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
+                        <RowDefinition Height="auto"/>
                         <RowDefinition Height="120"/>
                     </Grid.RowDefinitions>
                     
@@ -30,13 +31,15 @@
                         <TextBlock Text="{Binding Title, FallbackValue='Sample'}" FontSize="15" FontWeight="Bold" Margin="0 5 0 0"/>
                         <TextBlock Text="{Binding Version, FallbackValue='Sample'}" VerticalAlignment="Bottom"/>
                     </StackPanel>
-                    
-                    <StackPanel Orientation="Vertical" Grid.Row="1">
+
+                    <Image Source="..\Images\icon-ico.ico" Height="100" Width="100" Margin="0 0 0 45" HorizontalAlignment="Left" Grid.Row="1"/>
+
+                    <StackPanel Orientation="Vertical" Grid.Row="2">
                         <TextBlock Text="{Binding Copyright, FallbackValue='Sample'}" Margin="0 0 0 20"/>
                         <TextBlock Text="{Binding Distribution, FallbackValue='Sample'}" TextWrapping="Wrap"/>
                     </StackPanel>
                     
-                    <TextBlock Text="{Binding Source, FallbackValue='Sample'}" TextWrapping="Wrap" Margin="0 0 0 5" VerticalAlignment="Bottom" Grid.Row="1"/>
+                    <TextBlock Text="{Binding Source, FallbackValue='Sample'}" TextWrapping="Wrap" Margin="0 0 0 5" VerticalAlignment="Bottom" Grid.Row="2"/>
                 </Grid>
             </TabItem>
             <TabItem Header="License" Style="{DynamicResource TabItemStyle}">
