Started working on adding custom icons that can be colored as radio buttons

--- a/MW5 Mod Oganizer WPF/App.xaml
+++ b/MW5 Mod Oganizer WPF/App.xaml
@@ -26,6 +26,9 @@
                 <ResourceDictionary Source="Themes/DataGrid/ProfilesDataGridRowTheme.xaml"/>
                 <ResourceDictionary Source="Themes/TabControl/TabControlTheme.xaml"/>
                 <ResourceDictionary Source="Themes/TabControl/TabItemTheme.xaml"/>
+                <ResourceDictionary Source="Themes/RadioButton/SettingsRadioButton.xaml"/>
+                
+                <ResourceDictionary Source="Images/Icons/earth-americas-solid.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
