--- a/MW5 Mod Oganizer WPF/Views/SettingsView.xaml
+++ b/MW5 Mod Oganizer WPF/Views/SettingsView.xaml
@@ -21,8 +21,14 @@
             <UniformGrid Columns="0" Rows="5">
                 <RadioButton x:Name="GeneralButton" Content="General" IsChecked="{Binding BGeneralSettings, UpdateSourceTrigger=PropertyChanged}" GroupName="group1"/>
                 <RadioButton x:Name="AccessibilityButton" Content="Accessibility" IsChecked="{Binding BAccessibilitySettings, UpdateSourceTrigger=PropertyChanged}" GroupName="group1"/>
+                <Image>
+                    <Image.Source>
+                        <DrawingImage Drawing="{StaticResource earth_americas_solid_xaml}"/>
+                    </Image.Source>
+                </Image>
             </UniformGrid>
         </Border>
+        
         
         <Grid Grid.Column="1">
             <ContentControl>
