--- a/MW5 Mod Oganizer WPF/App.xaml
+++ b/MW5 Mod Oganizer WPF/App.xaml
@@ -4,6 +4,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Themes/Generic.xaml"/>
                 <ResourceDictionary Source="Themes/Button/ButtonMenuTheme.xaml"/>
                 <ResourceDictionary Source="Themes/Button/ButtonStandaloneTheme.xaml"/>
                 <ResourceDictionary Source="Themes/TextBox/TextBoxPrimaryPathTheme.xaml"/>
