--- a/MW5 Mod Oganizer WPF/Images/Icons/earth-americas-solid.xaml
+++ b/MW5 Mod Oganizer WPF/Images/Icons/earth-americas-solid.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" ?>
 <ResourceDictionary xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
-    <DrawingGroup x:Key="earth_americas_solid_xaml">
+    <DrawingGroup x:Key="earth_americas_solid">
         <DrawingGroup.ClipGeometry>
             <RectangleGeometry Rect="0.0,0.0,512.0,512.0"/>
         </DrawingGroup.ClipGeometry>
@@ -10,5 +10,5 @@
             </GeometryDrawing.Geometry>
         </GeometryDrawing>
     </DrawingGroup>
-    <DrawingImage Drawing="{StaticResource earth_americas_solid_xaml}" x:Key="di_earth_americas_solid_xaml"/>
+    <DrawingImage Drawing="{StaticResource earth_americas_solid}" x:Key="di_earth_americas_solid"/>
 </ResourceDictionary>
