Using MahApps for icons. Changed custom radiobutton to be used with these icons

--- a/MW5 Mod Oganizer WPF/App.xaml
+++ b/MW5 Mod Oganizer WPF/App.xaml
@@ -30,6 +30,7 @@
                 <ResourceDictionary Source="Themes/RadioButton/SettingsRadioButton.xaml"/>
                 
                 <ResourceDictionary Source="Images/Icons/earth-americas-solid.xaml"/>
+                <ResourceDictionary Source="Images/Icons/test.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
