--- a/MW5 Mod Oganizer WPF/Views/SettingsView.xaml
+++ b/MW5 Mod Oganizer WPF/Views/SettingsView.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:MW5_Mod_Organizer_WPF.Views"
         xmlns:customControls="clr-namespace:MW5_Mod_Organizer_WPF.CustomControls"
         xmlns:userControls="clr-namespace:MW5_Mod_Organizer_WPF.Views.UserControls"
+        xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
         mc:Ignorable="d"
         Title="Settings" Height="600
         " Width="800" FontSize="14" Background="#D1C9C9" WindowStartupLocation="CenterOwner">
@@ -20,8 +21,8 @@
             </Border.Effect>
 
             <UniformGrid Columns="0" Rows="5">
-                <customControls:SettingsButton x:Name="GeneralButton" DrawingGroup="{DynamicResource earth_americas_solid}" IsChecked="{Binding BGeneralSettings, UpdateSourceTrigger=PropertyChanged}" GroupName="group1"/>
-                <customControls:SettingsButton x:Name="AccessibilityButton" Content="Accessibility" IsChecked="{Binding BAccessibilitySettings, UpdateSourceTrigger=PropertyChanged}" GroupName="group1"/>
+                <customControls:SettingsButton x:Name="GeneralButton" Icon="Cogs" Foreground="Green" IsChecked="{Binding BGeneralSettings, UpdateSourceTrigger=PropertyChanged}" GroupName="group1"/>
+                <customControls:SettingsButton x:Name="AccessibilityButton" Icon="CommentMultiple" Foreground="Red" IsChecked="{Binding BAccessibilitySettings, UpdateSourceTrigger=PropertyChanged}" GroupName="group1"/>
             </UniformGrid>
         </Border>
         
