--- a/MW5 Mod Oganizer WPF/Images/Icons/earth-americas-solid.xaml
+++ b/MW5 Mod Oganizer WPF/Images/Icons/earth-americas-solid.xaml
@@ -1,12 +1,13 @@
 <?xml version="1.0" ?>
 <ResourceDictionary xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
+                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:customControls="clr-namespace:MW5_Mod_Organizer_WPF.CustomControls">
     <DrawingGroup x:Key="earth_americas_solid">
         <DrawingGroup.ClipGeometry>
             <RectangleGeometry Rect="0.0,0.0,512.0,512.0"/>
         </DrawingGroup.ClipGeometry>
-        <GeometryDrawing Brush="Red">
+        <GeometryDrawing Brush="{Binding Foreground, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=customControls:SettingsButton}}">
             <GeometryDrawing.Geometry>
                 <PathGeometry Figures="M 57.7 193 l 9.4 16.4 c 8.3 14.5 21.9 25.2 38 29.8 L 163 255.7 c 17.2 4.9 29 20.6 29 38.5 l 0 39.9 c 0 11 6.2 21 16 25.9 s 16 14.9 16 25.9 l 0 39 c 0 15.6 14.9 26.9 29.9 22.6 c 16.1 -4.6 28.6 -17.5 32.7 -33.8 l 2.8 -11.2 c 4.2 -16.9 15.2 -31.4 30.3 -40 l 8.1 -4.6 c 15 -8.5 24.2 -24.5 24.2 -41.7 l 0 -8.3 c 0 -12.7 -5.1 -24.9 -14.1 -33.9 l -3.9 -3.9 c -9 -9 -21.2 -14.1 -33.9 -14.1 L 257 256 c -11.1 0 -22.1 -2.9 -31.8 -8.4 l -34.5 -19.7 c -4.3 -2.5 -7.6 -6.5 -9.2 -11.2 c -3.2 -9.6 1.1 -20 10.2 -24.5 l 5.9 -3 c 6.6 -3.3 14.3 -3.9 21.3 -1.5 l 23.2 7.7 c 8.2 2.7 17.2 -0.4 21.9 -7.5 c 4.7 -7 4.2 -16.3 -1.2 -22.8 l -13.6 -16.3 c -10 -12 -9.9 -29.5 0.3 -41.3 l 15.7 -18.3 c 8.8 -10.3 10.2 -25 3.5 -36.7 l -2.4 -4.2 c -3.5 -0.2 -6.9 -0.3 -10.4 -0.3 C 163.1 48 84.4 108.9 57.7 193 z M 464 256 c 0 -36.8 -9.6 -71.4 -26.4 -101.5 L 412 164.8 c -15.7 6.3 -23.8 23.8 -18.5 39.8 l 16.9 50.7 c 3.5 10.4 12 18.3 22.6 20.9 l 29.1 7.3 c 1.2 -9 1.8 -18.2 1.8 -27.5 z M 0 256 a 256 256 0 1 1 512 0 A 256 256 0 1 1 0 256 z" FillRule="Nonzero"/>
             </GeometryDrawing.Geometry>
