--- a/MW5 Mod Oganizer WPF/Themes/Generic.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/Generic.xaml
@@ -1,19 +1,24 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:customControls="clr-namespace:MW5_Mod_Organizer_WPF.CustomControls">
+                    xmlns:customControls="clr-namespace:MW5_Mod_Organizer_WPF.CustomControls"
+                    xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks">
     <Style TargetType="{x:Type customControls:SettingsButton}">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type customControls:SettingsButton}">
                     <Grid>
-                        <Image Width="50">
-                            <Image.Source>
-                                <DrawingImage Drawing="{Binding DrawingGroup, RelativeSource={RelativeSource AncestorType={x:Type customControls:SettingsButton}}}"/>
-                            </Image.Source>
-                        </Image>
+                        <icon:PackIconMaterial Kind="{Binding Icon, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type customControls:SettingsButton}}}" Style="{DynamicResource settingsButtonIcon}"/>
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+    </Style>
+
+    <Style x:Key="settingsButtonIcon" TargetType="icon:PackIconMaterial">
+        <Setter Property="Width" Value="50"/>
+        <Setter Property="Height" Value="50"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Foreground" Value="{Binding Foreground, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type customControls:SettingsButton}}}"/>
     </Style>
 </ResourceDictionary>
