--- a/MW5 Mod Oganizer WPF/Views/SettingsView.xaml
+++ b/MW5 Mod Oganizer WPF/Views/SettingsView.xaml
@@ -8,7 +8,7 @@
         xmlns:userControls="clr-namespace:MW5_Mod_Organizer_WPF.Views.UserControls"
         xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
         mc:Ignorable="d"
-        Title="Settings" Height="600
+        Title="" Height="600
         " Width="800" FontSize="14" Background="#D1C9C9" WindowStartupLocation="CenterOwner">
     <Grid>
         <Grid.ColumnDefinitions>
