--- a/MW5 Mod Oganizer WPF/Themes/Generic.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/Generic.xaml
@@ -12,11 +12,13 @@
                         <Grid.RowDefinitions>
                             <RowDefinition Height="60"/>
                             <RowDefinition Height="20"/>
+                            <RowDefinition Height="10"/>
                         </Grid.RowDefinitions>
                         <Border Background="Transparent" Grid.Row="0">
                             <icon:PackIconMaterial Kind="{Binding Icon, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type customControls:SettingsButton}}}" Style="{DynamicResource settingsButtonIcon}"/>
                         </Border>
-                        <TextBlock Text="{TemplateBinding Content}" Foreground="{TemplateBinding Foreground}" HorizontalAlignment="Center" Grid.Row="1"/>
+                        <TextBlock Text="{TemplateBinding Content}" FontWeight="SemiBold" Foreground="{TemplateBinding Foreground}" HorizontalAlignment="Center" Grid.Row="1"/>
+                        <Separator Background="#ED552F" Grid.Row="2" Visibility="{Binding LineVisibility, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type customControls:SettingsButton}}}"/>
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
@@ -25,6 +27,12 @@
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Foreground" Value="#ED552F"/>
                 <Setter Property="Cursor" Value="Hand"/>
+            </Trigger>
+            <Trigger Property="IsPressed" Value="True">
+                <Setter Property="Margin" Value="0 5 0 0"/>
+            </Trigger>
+            <Trigger Property="IsChecked" Value="True">
+                <Setter Property="LineVisibility" Value="Visible"/>
             </Trigger>
         </Style.Triggers>
     </Style>
