--- a/MW5 Mod Oganizer WPF/Views/UserControls/GeneralSettings.xaml
+++ b/MW5 Mod Oganizer WPF/Views/UserControls/GeneralSettings.xaml
@@ -5,9 +5,16 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MW5_Mod_Organizer_WPF.Views.UserControls"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <TextBlock Text="GeneralSettings" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-
+             d:DesignHeight="450" d:DesignWidth="800" d:Background="Beige">
+    <Grid Margin="20">
+        <StackPanel>
+            <Label Content="Game info" Foreground="#484D54" FontSize="20" FontWeight="Bold"/>
+            <Separator Margin="0 0 0 10"/>
+            <TextBox Text="{Binding GameVersion, UpdateSourceTrigger=PropertyChanged}" Height="25" VerticalContentAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource TextBoxGameVersionTheme}">
+                <ToolTipService.ToolTip>
+                    <ToolTip Content="Sets the game version of your mods. Should be set as the same version your game is running at."/>
+                </ToolTipService.ToolTip>
+            </TextBox>
+        </StackPanel>
     </Grid>
 </UserControl>
